--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "api": "hai-server --watch todos.json"
+    "api": "hai-server --watch todos.json --port 8000",
+    "start": "lite-server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "hai-server": "^0.0.4"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.3",
+    "lite-server": "^2.6.1",
+    "save-dev": "^0.0.1-security"
   }
 }
